# lernlotsen-rs-backend

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  build.rs  deploy.sh  deploy_ansible.sh  docker-compose.yml
.sqlx/: query-043745574e1ec007c1fefa9fa85844eeaadd4dac91617e1effcedc7b706340a6.json  query-09eab30f3d132da66bead0fa1f198bcf8b1055cd48fe5ac02f1f7075b76a4502.json  query-1747db798bb51c9d3d48a7f3b585b446a4a477dc71766c85675fab0f058c018f.json  query-20c368b95f055a78a6b8ca04923a2058a62ffe737e76b21d00d6d2343c0b27b0.json  query-365890680a148988f2ca89d6cd2effa014c09b7bbf9ad2fc256b93e7b1d48563.json  query-395db08848a70c8f4668b10737aa40a7fc965f251eca6143e0d28f396a733c1d.json  query-520e1c4f57d515a52974fba2517a89deea6a6f0ba0c1e88c1fe0f623fc317863.json  query-56180abf96f2308bfa07a0612f8810e659f72769a6dbbae5429e8fe54214ffdf.json  query-5b1c46fa8df124ffc623a850000b38f4faa179393ec40d57c879247c56cdd55a.json  query-5e4ff3c212567e31a4083a7b3d3bf880a126e6060d9ebe647b9718728603788d.json  query-61a4e2bdf79af73f3f0f007f555e7c34cf1cce7f2075fb467830d83cf7c5e4c3.json  query-664ef6cba1bf1c3464749f26c98b25c2823d9afabeb526e64673acd17677f956.json  query-7154c5b398c3b2b37ab9a262fd702d787676ce78036910b71834cf2762f1aa7b.json  query-89903a6da744d0fe8ee660ba908464a8ebf3491808764c53065e4fa079b64609.json  query-966fa4c57186d9cd40046b7a5c76c8c6ad53cef8874757297971651d179c8bd2.json  query-9a0784b58f0fa3c65e5f409720bb2a68f7da65eeee29d9882783be97051f67d1.json  query-a298d34e01e0e56cdbd44564429b60e5cf3eb10a5fe6cf629ef27cbc6f309c81.json  query-a359b1ba2a238542c2f9045666d7859912ec4eb8015b77597ccc40facaf06073.json  query-ad2bb2a2d7b83dbe45c7eff077c6afd6f1d8495f262ebcda4357318bf5b44cdb.json  query-adac1f1626ee2a335753f18c2060ef93bb2c1d22422ed666e44dc5f1ed2e348a.json  query-b4712c1e804a45a69355e1b53ea629707a149240f4ea5c8647c5d659b77dd4b7.json  query-bd9aaf566d4542669bb6f4488578d64a81d7a4dc569f2c250b4310925f939860.json  query-dd9acd2c73789734452f67cec1bb3eceb66b8a0300a4afbe0b5796df9d9d8224.json  query-e0be2a2148439693fc8495dc4321f697e826ff8ecb832aab87ec614a5e47b0df.json  query-f662030d47a9ea28a9785ee91d1bb23d3682588f17dc95ced6e5a6e851969aa6.json  query-fffae752d222228bcf38f71c8e5ad1b13bf97458f4d846a0e2ebd6099cc164ab.json
migrations/: 20231007104839_timeslots.sql  20231007124142_add_entry_index.sql  20231007125753_entries_index_unique.sql  20231008074723_entries_timeslots_user_id.sql  20231009171307_fix_entry_unique_index.sql  20231009181421_improve_entry_index.sql  20231207073628_sessions.sql  20231214215535_entry_state_rework.sql  20231215111158_fix_student_state.sql  20231215123123_finish_rolling_migration.sql
src/: main.rs
src/api/: auth.rs  entry.rs  health.rs  mod.rs  timeslot.rs  util.rs
src/api/auth/: util.rs
src/api/handlers/: entries.rs  entry.rs  health.rs  mod.rs  timeslot.rs
src/api/logic/: entries.rs  entry.rs  export.rs  mod.rs  timeslot.rs
src/auth/: mod.rs
src/configuration/: mod.rs
src/db/: migrate.rs  mod.rs  model.rs
src/db/queries/: entry.rs  mod.rs  session.rs  timeslot.rs
src/util/: logging.rs  mod.rs
