[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
mongodb = "2.6"
chrono = { version = "0.4.26", features = ["serde"] }
bson = { version = "2.6.1", features = ["chrono-0_4", "uuid-1"] }
serde = { version = "1.0.183", features = ["derive"] }
config = { version = "0.13.3", default-features = false}
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
futures-util = "0.3.28"
serde_json = "1.0.105"
tower-http = { version = "0.4.3", features = ["trace"] }
tower-request-id = "0.2.1"
url = { version = "2.4.1", features = ["serde"] }
axum_session = "0.3.5"
alcoholic_jwt = "4091"
reqwest = { version = "0.11.20", features = ["json"] }
thiserror = "1.0.47"
chrono-tz = { version = "0.8.3", features = ["serde"] }
anyhow = "1.0.75"
tracing-bunyan-formatter = "0.3.9"
