[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
config = { version = "0.13.3", default-features = false }
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
futures-util = "0.3.28"
serde_json = "1.0.105"
tower-http = { version = "0.5.1", features = ["trace"] }
tower-request-id = "0.3.0"
url = { version = "2.4.1", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json"] }
thiserror = "1.0.47"
chrono-tz = { version = "0.8.3", features = ["serde"] }
anyhow = "1.0.75"
tracing-bunyan-formatter = "0.3.9"
itertools = "0.11.0"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
sqlx = { version = "0.7.2", features = [
	"chrono",
	"postgres",
	"runtime-tokio-rustls",
	"uuid",
] }
secrecy = "0.8.0"
openid = "0.12.1"
rand = "0.8.5"
base64 = "0.21.5"
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
